polish commit: remove not needed component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,12 +33,12 @@
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
-                  <div class="card-header card-header-danger card-header-icon">
+                  <div class="card-header card-header-info card-header-icon">
                       <div class="card-icon">
-                          <i class="material-icons">info_outline</i>
+                          <i class="material-icons">thumb_up</i>
                       </div>
-                      <p class="card-category">Parameter</p>
-                      <h3 class="card-title">XX</h3>
+                      <p class="card-category">Profiles Matched</p>
+                      <h3 class="card-title">10</h3>
                   </div>
                   <div class="card-footer">
                       
@@ -47,12 +47,12 @@
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
-                  <div class="card-header card-header-info card-header-icon">
+                  <div class="card-header card-header-danger card-header-icon">
                       <div class="card-icon">
-                          <i class="fa fa-green"></i>
+                            <i class="material-icons">info_outline</i>
                       </div>
-                      <p class="card-category">Parameter 2</p>
-                      <h3 class="card-title">XX</h3>
+                      <p class="card-category">Candidates may not join</p>
+                      <h3 class="card-title">14</h3>
                   </div>
                   <div class="card-footer">
                      
