--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -61,7 +61,7 @@
           </div>
       </div>
       <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-12">
               <div class="card card-chart">
                   <div class="card-header card-header-success">
                       <div class="ct-chart" id="dailySalesChart"></div>
@@ -76,18 +76,19 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-4">
-              <div class="card card-chart">
-                  <div class="card-header card-header-warning">
-                      <div class="ct-chart" id="websiteViewsChart"></div>
+      </div>
+      <div class="row">
+          <div class="col-md-12">
+              <div class="card card-chart ">
+                  <div class="card-header card-header-success">
+                      <div class="ct-chart" id="budgetByTeam"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Email Subscriptions</h4>
-                      <p class="card-category">Last Campaign Performance</p>
+                      <h4 class="card-title">Budget exhausted per team</h4>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
+                          <i class="material-icons">access_time</i> updated just now
                       </div>
                   </div>
               </div>
