--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
                       <div class="card-icon">
                           <i class="material-icons">content_copy</i>
                       </div>
-                      <h6  class="card-category">Joining Status</h6>
+                      <h6  class="card-category">Candidates May Join</h6>
                       <h3 style="white-space: nowrap" class="card-title">{{totalGreenStatus}}/{{totalCandidates}}
                           
                       </h3>
@@ -81,7 +81,7 @@
           <div class="col-md-12">
               <div class="card card-chart ">
                   <div class="card-header ">
-                      <div class="ct-chart" id="budgetByTeam"></div>
+                      <div class="ct-chart ct-chart-bar" id="budgetByTeam"></div>
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Budget exhausted per team</h4>
