--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -46,7 +46,7 @@
                               <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
                                     <mat-label>Age</mat-label>
-                                  <input matInput formControlName="Age" placeholder="age" type="text">
+                                  <input matInput formControlName="Age" placeholder="Age" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
@@ -54,7 +54,7 @@
                               <div class="col-md-3">
                                   <mat-label>Distance From Home</mat-label>
                                 <mat-form-field class="example-full-width">
-                                  <input matInput formControlName="DistanceFromHome" placeholder="distanceFromHome" type="text">
+                                  <input matInput formControlName="DistanceFromHome" placeholder="Distance From Home" type="text">
                                 </mat-form-field>
                               </div>
                               <div class="col-md-6">
@@ -76,42 +76,41 @@
                                </div>
                                <div class="col-md-3">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput formControlName="CurrentSalary" placeholder="CurrentSalary" type="text">
+                                    <input matInput formControlName="CurrentSalary" placeholder="Current Salary" type="text">
                                   </mat-form-field>
                                </div>
                           </div>
                         
-                          <div class="row">
-                            
-    <div class="col-md-3">
-        <mat-form-field class="example-full-width">
-            <mat-label>Job Level</mat-label>
-            <select matNativeControl required formControlName="JobLevel">
-                <option value="EE">EE</option>
-                <option value="AO">AO</option>
-                <option value="AD">AD</option>
-                <option value="DI">DI</option>
-                <option value="ED">ED</option>
-              </select>
-        </mat-form-field>
-   </div>
-   <div class="col-md-3">
-      <mat-form-field class="example-full-width">
-          <mat-label>Total Experience</mat-label>
-        <input matInput formControlName="TotalWorkingYears" placeholder="Comma Separated Skills" type="text">
-      </mat-form-field>
-   </div>
-           </div>
-           <div class="row">
-              <div class="col-md-9">
-                  <mat-form-field class="example-full-width">
-                      <mat-label>Skill Sets</mat-label>
-                     <input matInput formControlName="skillSets" placeholder="Comma Separated Skills" type="text">
-                  </mat-form-field>
-                </div>
-          </div>
-                         <button mat-raised-button type="submit" class="btn btn-danger pull-right">Add Profile</button>
-                          <div class="clearfix"></div>
+                          <div class="row">                            
+                            <div class="col-md-3">
+                              <mat-form-field class="example-full-width">
+                                <mat-label>Job Level</mat-label>
+                                <select matNativeControl required formControlName="JobLevel">
+                                    <option value="EE">EE</option>
+                                     <option value="AO">AO</option>
+                                      <option value="AD">AD</option>
+                                      <option value="DI">DI</option>
+                                      <option value="ED">ED</option>
+                                </select>
+                                </mat-form-field>
+                            </div>
+                              <div class="col-md-3">
+                                  <mat-form-field class="example-full-width">
+                                      <mat-label>Total Experience</mat-label>
+                                    <input matInput formControlName="TotalWorkingYears" placeholder="Comma Separated Skills" type="text">
+                                  </mat-form-field>
+                              </div>
+                                      </div>
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Skill Sets</mat-label>
+                                      <input matInput formControlName="skillSets" placeholder="Comma Separated Skills" type="text">
+                                    </mat-form-field>
+                                  </div>
+                            </div>
+                           <button mat-raised-button type="submit" class="btn btn-danger pull-right">Add Profile</button>
+                           <div class="clearfix"></div>
                       </form>
                  </div>
                </div>
