--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -33,8 +33,9 @@
                                   </th>
 
                               </tr>
-                              <tbody>
-                                  <tr *ngFor="let candidate of candidates; let i = index">
+                              <tbody *ngIf="candidateService">
+
+                                  <tr *ngFor="let candidate of candidateService.candidates; let i = index">
 
                                       <td>
                                           {{candidate.jobId}}
