--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -70,6 +70,19 @@
                           <div class="row">
                               <div class="col-md-3">
                                   <mat-form-field class="example-full-width">
+                                    <mat-label>Job ID</mat-label>
+                                    <select matNativeControl required formControlName="jobId">
+                                        <option value="43552435">43552435</option>
+                                         <option value="AO">AO</option>
+                                          <option value="AD">AD</option>
+                                          <option value="DI">DI</option>
+                                          <option value="ED">ED</option>
+                                    </select>
+                                    </mat-form-field>
+                                </div>
+    
+                              <div class="col-md-3">
+                                  <mat-form-field class="example-full-width">
                                       <mat-label>Percentage Hike Offered</mat-label>
                                     <input matInput formControlName="PercentSalaryHike" placeholder="Percentage Hike Offered" type="text">
                                   </mat-form-field>
