--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
        <!-- <div class="logo-img">
             <img src="ubs-logo.png"/>
         </div> -->
-        Joining Prediction Engine
+        Intelligent Resourcing
     </a>
 </div>
 <div class="sidebar-wrapper">
