--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -46,7 +46,7 @@
                                           {{candidate.name}}
                                       </td>
                                       <td>
-                                          {{candidate.ProfileMatching}}
+                                          {{candidate.ProfileMatching || 0}}
                                       </td>
                                       <td>
                                           {{candidate.Joining}}
@@ -64,8 +64,6 @@
                                             {{candidate.PercentSalaryHike}}
                                           </span>
                                       </td>
-
-
 
 
                                   </tr>
